--- a/Examen1LuisMartinez/Examen1LuisMartinez.csproj
+++ b/Examen1LuisMartinez/Examen1LuisMartinez.csproj
@@ -31,6 +31,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="EndPoints\" />
-    <Folder Include="Implementacion\" />
+    <Folder Include="EndPoints\" />
   </ItemGroup>
 </Project>
